# TODO: auto-gen from XML

wayland_server_core_hh = custom_target(
  'wayland-server-core-hh',
  output : 'wayland-server-core.hh',
  input : 'wayland-server-core.hh',
  command : ['cp', '@INPUT@', '@OUTPUT@'],
)

z11_server_protocol_hh = custom_target(
  'z11_server_protocol_hh',
  output : 'z11-server-protocol.hh',
  input : 'z11-server-protocol.hh',
  command : ['cp', '@INPUT@', '@OUTPUT@'],
)
